# mcp-browsy

./: .gitignore  README.md  pyproject.toml
src/mcp_browsy/: __init__.py  browser.py  cdp.py  dom.py  hq_client.py  server.py
src/mcp_browsy/tools/: __init__.py  input.py  inspection.py  navigation.py
src/mcp_browsy/utils/: __init__.py  platform.py
tests/: __init__.py  conftest.py  test_e2e.py  test_platform.py  test_unit.py
