[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-browsy"
version = "0.1.0"
description = "World-class browser automation MCP server using direct CDP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jetta Intelligence", email = "dev@jettaintelligence.com" }
]
keywords = ["mcp", "browser", "automation", "cdp", "chrome", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-browsy = "mcp_browsy.server:main"

[project.urls]
Homepage = "https://github.com/aic-holdings/mcp-browsy"
Repository = "https://github.com/aic-holdings/mcp-browsy"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_browsy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
